# QLMS

./: README.md  generate_ssl.sh  qlms.sql  sample_data.sql
QLMSClient/: CMakeLists.txt  admindashboard.cpp  admindashboard.h  basedashboardwindow.cpp  basedashboardwindow.h  classmanagementwidget.cpp  classmanagementwidget.h  courseeditorwidget.cpp  courseeditorwidget.h  courselistwidget.cpp  courselistwidget.h  coursemanagementwidget.cpp  coursemanagementwidget.h  filterwidget.cpp  filterwidget.h  gradingwidget.cpp  gradingwidget.h  instructordashboard.cpp  instructordashboard.h  logindialog.cpp  logindialog.h  main.cpp  materialcreationwizard.cpp  materialcreationwizard.h  networkmanager.cpp  networkmanager.h  performancetrackingwidget.cpp  performancetrackingwidget.h  quizhistorywidget.cpp  quizhistorywidget.h  studentdashboard.cpp  studentdashboard.h  usermanagementwidget.cpp  usermanagementwidget.h  usersearchdialog.cpp  usersearchdialog.h
QLMSServer/: .clang-format  .gitignore  CMakeLists.txt  clienthandler.cpp  clienthandler.h  coursematerial.cpp  coursematerial.h  databasemanager.cpp  databasemanager.h  main.cpp  question.cpp  question.h  server.cpp  server.h  user.cpp  user.h
